test/files/neg/bug693.scala
abstract class test4 {
  trait Type;
  val x : Type = null;
  val x : Int = 10; 
}
