test/files/neg/bug693.check
bug693.scala:4: error: x is already defined as value x
  val x : Int = 10; 
      ^
one error found
